--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,10 @@
 html {
-  background-color: #E4E9FD;
+  background-color: #909ac0;
   font-family: 'helvetica neue';
 }
-
+body{
+  background-color: #e7ecff;
+}
 h1 {
   color: #fff;
   padding: 10px;
@@ -54,7 +56,7 @@ form {
   margin-left: 20px;
 }
 
-button {
+#specific {
   min-height: 50px;
   width: 50px;
   border-radius: 50%;
@@ -92,7 +94,34 @@ input[type="text"]:focus {
 }
 
 footer {
-  color: white;
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
+}
+.navbar{
+  background-color: #A683E3;
+}
+.me-auto{
+  margin-left: 15%;
+}
+.nav-link{
+  color: white;
+  transition: .3s;
+  transition-timing-function: ease-in-out;
+}
+.nav-link:active{
+  color: black;
+}
+.nav-link:hover{
+  background-color: rgb(189, 189, 0);
+  color: black;
+  transform: scale(1.1);
+  margin: 0 5px;
+}
+.navbar-brand{
+  font-weight: 900;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin-left: 7%;
+}
+.navbar-brand p{
+  color: white;
 }
